...

                </FrameLayout>

            </FrameLayout>

            <EditText
                android:id="@+id/tour_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:padding="5dp"
                android:background="#EEEEEE"
...
                    android:text="Location:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_location_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="20sp"
...
                    android:text="Cost:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_cost_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:padding="5dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
...
                    android:text="Start Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_start_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date" />
...
                    android:text="End Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_end_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date"/>
...
                    android:id="@+id/tour_attraction_sort_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginEnd="24dp"
                    android:layout_gravity="center|center_vertical"
                    android:background="#EEEEEE"
                    android:text="Sort By"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <LinearLayout
...
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tour_attractions_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="true"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:paddingTop="10dp"
...
                    android:layout_weight="0.6"
                    android:text="@string/fragment_edit_tour_notifications"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/tour_public_cb"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginStart="180dp"
                    android:text="@string/fragment_edit_tour_public"
                    android:textColor="@color/colorAccent"
...
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp" />

            <Button
                android:id="@+id/tour_update_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape_selector_white"
...
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp" />

            <Button
                android:id="@+id/tour_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape_selector_accent"
...
