...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_top_panel_container" />

    <Button
        android:id="@+id/profile_logout_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@drawable/btn_shape_selector_accent"
        android:text="Logout"
        android:textColor="#EEEEEE"
...
